
    HADOOP-11599. Client#getTimeout should use IPC_CLIENT_PING_DEFAULT when 
    IPC_CLIENT_PING_KEY is not configured. (zhihai xu via ozawa)

    HADOOP-11545. ArrayIndexOutOfBoundsException is thrown with "hadoop
    credential list -provider". (Brahma Reddy Battula via aajisaka)

    HADOOP-11595. Add default implementation for AbstractFileSystem#truncate.
    (yliu)

Release 2.6.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11466. FastByteComparisons: do not use UNSAFE_COMPARER on the SPARC
    architecture because it is slower there (Suman Somasundar via Colin P.
    McCabe)

Release 2.6.0 - 2014-11-18

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10433. Key Management Server based on KeyProvider API. (tucu)

    HADOOP-10893. isolated classloader on the client side (Sangjin Lee via
    jlowe)

    HADOOP-10400. Incorporate new S3A FileSystem implementation. (Jordan
    Mendelson and Dave Wang via atm)

  IMPROVEMENTS

    HADOOP-10808. Remove unused native code for munlock. (cnauroth)

    HADOOP-10815. Implement Windows equivalent of mlock. (cnauroth)

    HADOOP-7664. Remove warmings when overriding final parameter configuration
    if the override value is same as the final parameter value.
    (Ravi Prakash via suresh)

    HADOOP-10673. Update rpc metrics when the call throws an exception. (Ming Ma
    via jing9)

    HADOOP-10845. Add common tests for ACLs in combination with viewfs.
    (Stephen Chu via cnauroth)

    HADOOP-10839. Add unregisterSource() to MetricsSystem API.
    (Shanyu Zhao via cnauroth)

    HADOOP-10607. Create an API to separate credentials/password storage
    from applications (Larry McCay via omalley)

    HADOOP-10732. Fix locking in credential update. (Ted Yu via omalley)

    HADOOP-10733. Fix potential null dereference in CredShell. (Ted Yu via
    omalley)

    HADOOP-10610. Upgrade S3n s3.fs.buffer.dir to support multi directories.