@@ -696,9 +696,14 @@ argument_list|(
 name|buffer
 argument_list|)
 condition|)
+block|{
+name|refreshQueueSizeGauge
+argument_list|()
+expr_stmt|;
 return|return
 literal|true
 return|;
+block|}
 name|dropped
 operator|.
 name|incr
@@ -733,7 +738,6 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
-operator|!
 name|queue
 operator|.
 name|enqueue
@@ -741,6 +745,12 @@ argument_list|(
 name|waitableBuffer
 argument_list|)
 condition|)
+block|{
+name|refreshQueueSizeGauge
+argument_list|()
+expr_stmt|;
+block|}
+else|else
 block|{
 name|LOG
 operator|.
@@ -846,6 +856,9 @@ name|consumeAll
 argument_list|(
 name|this
 argument_list|)
+expr_stmt|;
+name|refreshQueueSizeGauge
+argument_list|()
 expr_stmt|;
 name|retryDelay
 operator|=
@@ -1000,6 +1013,9 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
+name|refreshQueueSizeGauge
+argument_list|()
+expr_stmt|;
 name|inError
 operator|=
 literal|true
@@ -1008,6 +1024,23 @@ comment|// Don't keep complaining ad infinitum
 block|}
 block|}
 block|}
+block|}
+DECL|method|refreshQueueSizeGauge ()
+specifier|private
+name|void
+name|refreshQueueSizeGauge
+parameter_list|()
+block|{
+name|qsize
+operator|.
+name|set
+argument_list|(
+name|queue
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Override
