@@ -112,9 +112,33 @@ name|org
 operator|.
 name|mockito
 operator|.
+name|invocation
+operator|.
+name|InvocationOnMock
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
 name|runners
 operator|.
 name|MockitoJUnitRunner
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|stubbing
+operator|.
+name|Answer
 import|;
 end_import
 
@@ -2899,6 +2923,319 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testQSize ()
+specifier|public
+name|void
+name|testQSize
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+operator|new
+name|ConfigBuilder
+argument_list|()
+operator|.
+name|add
+argument_list|(
+literal|"*.period"
+argument_list|,
+literal|8
+argument_list|)
+operator|.
+name|add
+argument_list|(
+literal|"test.sink.test.class"
+argument_list|,
+name|TestSink
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+operator|.
+name|save
+argument_list|(
+name|TestMetricsConfig
+operator|.
+name|getTestFilename
+argument_list|(
+literal|"hadoop-metrics2-test"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MetricsSystemImpl
+name|ms
+init|=
+operator|new
+name|MetricsSystemImpl
+argument_list|(
+literal|"Test"
+argument_list|)
+decl_stmt|;
+specifier|final
+name|CountDownLatch
+name|proceedSignal
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+specifier|final
+name|CountDownLatch
+name|reachedPutMetricSignal
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|ms
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|MetricsSink
+name|slowSink
+init|=
+name|mock
+argument_list|(
+name|MetricsSink
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|MetricsSink
+name|dataSink
+init|=
+name|mock
+argument_list|(
+name|MetricsSink
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|ms
+operator|.
+name|registerSink
+argument_list|(
+literal|"slowSink"
+argument_list|,
+literal|"The sink that will wait on putMetric"
+argument_list|,
+name|slowSink
+argument_list|)
+expr_stmt|;
+name|ms
+operator|.
+name|registerSink
+argument_list|(
+literal|"dataSink"
+argument_list|,
+literal|"The sink I'll use to get info about slowSink"
+argument_list|,
+name|dataSink
+argument_list|)
+expr_stmt|;
+name|doAnswer
+argument_list|(
+operator|new
+name|Answer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Object
+name|answer
+parameter_list|(
+name|InvocationOnMock
+name|invocation
+parameter_list|)
+throws|throws
+name|Throwable
+block|{
+name|reachedPutMetricSignal
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+name|proceedSignal
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|slowSink
+argument_list|)
+operator|.
+name|putMetrics
+argument_list|(
+name|any
+argument_list|(
+name|MetricsRecord
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// trigger metric collection first time
+name|ms
+operator|.
+name|onTimerEvent
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|reachedPutMetricSignal
+operator|.
+name|await
+argument_list|(
+literal|1
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Now that the slow sink is still processing the first metric,
+comment|// its queue length should be 1 for the second collection.
+name|ms
+operator|.
+name|onTimerEvent
+argument_list|()
+expr_stmt|;
+name|verify
+argument_list|(
+name|dataSink
+argument_list|,
+name|timeout
+argument_list|(
+literal|500
+argument_list|)
+operator|.
+name|times
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+operator|.
+name|putMetrics
+argument_list|(
+name|r1
+operator|.
+name|capture
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|MetricsRecord
+argument_list|>
+name|mr
+init|=
+name|r1
+operator|.
+name|getAllValues
+argument_list|()
+decl_stmt|;
+name|Number
+name|qSize
+init|=
+name|Iterables
+operator|.
+name|find
+argument_list|(
+name|mr
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|metrics
+argument_list|()
+argument_list|,
+operator|new
+name|Predicate
+argument_list|<
+name|AbstractMetric
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|apply
+parameter_list|(
+annotation|@
+name|Nullable
+name|AbstractMetric
+name|input
+parameter_list|)
+block|{
+assert|assert
+name|input
+operator|!=
+literal|null
+assert|;
+return|return
+name|input
+operator|.
+name|name
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"Sink_slowSinkQsize"
+argument_list|)
+return|;
+block|}
+block|}
+argument_list|)
+operator|.
+name|value
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|qSize
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|proceedSignal
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+name|ms
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Metrics
